# martypc

./: .clippy.toml  .gitignore  BUILDING.md  CHANGELOG.md  CREDITS.md  Cargo.toml  LICENSE  README.md  build.rs  index.html  rustfmt.toml
core/: Cargo.toml
core/benches/: cga_bench.rs  cpu_bench.rs
core/src/: breakpoints.rs  bus.rs  bytebuf.rs  bytequeue.rs  config.rs  coreconfig.rs  cpu_validator.rs  file_util.rs  floppy_manager.rs  input.rs  interrupt.rs  keys.rs  lib.rs  machine.rs  machine_config.rs  machine_manager.rs  machine_types.rs  memerror.rs  rom_manager.rs  sound.rs  syntax_token.rs  tracelogger.rs  updatable.rs  util.rs  vhd.rs  vhd_manager.rs  videocard.rs
core/src/arduino8088_client/: mod.rs
core/src/arduino8088_validator/: mod.rs  queue.rs  remote_cpu.rs  udmask.rs
core/src/cpu_808x/: addressing.rs  alu.rs  bcd.rs  bitwise.rs  biu.rs  cpu.rs  cycle.rs  decode.rs  display.rs  execute.rs  fuzzer.rs  gdr.rs  instruction.rs  interrupt.rs  jump.rs  logging.rs  microcode.rs  mnemonic.rs  mod.rs  modrm.rs  muldiv.rs  queue.rs  stack.rs  step.rs  string.rs
core/src/cpu_common/: addressing.rs  alu.rs  analyzer.rs  builder.rs  instruction.rs  mnemonic.rs  mod.rs  operands.rs  services.rs
core/src/cpu_vx0/: addressing.rs  alu.rs  bcd.rs  bitwise.rs  biu.rs  cpu.rs  cycle.rs  decode.rs  display.rs  execute.rs  execute_extended.rs  fuzzer.rs  gdr.rs  instruction.rs  logging.rs  mnemonic.rs  mod.rs  modrm.rs  muldiv.rs  queue.rs  stack.rs  step.rs  string.rs
core/src/device_traits/: mod.rs  sounddevice.rs  videocard.rs
core/src/device_types/: chs.rs  fdc.rs  hdc.rs  mod.rs
core/src/devices/: a0.rs  adlib.rs  cartridge_slots.rs  cga.rs  dipswitch.rs  dma.rs  fdc.rs  floppy_drive.rs  game_port.rs  hdc.rs  keyboard.rs  lotech_ems.rs  lpt_card.rs  lpt_port.rs  mc6845.rs  mod.rs  mouse.rs  null_sound.rs  pic.rs  pit.rs  ppi.rs  serial.rs
core/src/devices/cga/: draw.rs  io.rs  mmio.rs  mod.rs  tablegen.rs  videocard.rs
core/src/devices/ega/: attribute_controller.rs  attribute_regs.rs  crtc.rs  crtc_regs.rs  draw.rs  graphics_controller.rs  graphics_regs.rs  io.rs  mmio.rs  mod.rs  planes.rs  sequencer.rs  sequencer_regs.rs  tablegen.rs  videocard.rs  vram.rs
core/src/devices/implementations/: fdc.rs  hdc.rs  keyboard.rs  mc6845.rs  mod.rs  mouse.rs  pic.rs  ppi.rs  serial.rs
core/src/devices/mda/: attr.rs  draw.rs  io.rs  mmio.rs  mod.rs  tablegen.rs  videocard.rs
core/src/devices/tga/: draw.rs  io.rs  mmio.rs  mod.rs  tablegen.rs  videocard.rs
core/src/devices/traits/: mod.rs  videocard.rs
core/src/devices/types/: fdc.rs  mod.rs
core/src/devices/vga/: attribute_controller.rs  attribute_regs.rs  color_regs.rs  crtc.rs  crtc_regs.rs  draw.rs  graphics_controller.rs  graphics_regs.rs  io.rs  mod.rs  planes.rs  sequencer_regs.rs  videocard.rs
core/src/devices/vga_old/: color_regs.rs  crtc_regs.rs  sequencer_regs.rs
crates/binaries/martypc_eframe/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  rust-toolchain.toml  wasm-build-glow.bat  wasm-build-wgpu.bat  wasm-serve-glow-debug.bat  wasm-serve-glow.bat  wasm-serve-wgpu-debug.bat  wasm-serve-wgpu.bat
crates/binaries/martypc_eframe/assets/: manifest.json
crates/binaries/martypc_eframe/src/: app.rs  input.rs  lib.rs  main.rs  timestep_update.rs
crates/binaries/martypc_headless/: Cargo.toml
crates/binaries/martypc_headless/src/: lib.rs  run_benchmark.rs  run_fuzzer.rs
crates/frontends/martypc_headless/: Cargo.toml
crates/frontends/martypc_headless/src/: lib.rs  main.rs  run_benchmark.rs  run_fuzzer.rs
crates/marty_common/: Cargo.toml
crates/marty_common/src/: lib.rs  util.rs
crates/marty_common/src/bytebuf/: mod.rs
crates/marty_common/src/path/: mod.rs
crates/marty_common/src/types/: cartridge.rs  history_buffer.rs  joystick.rs  mod.rs  rom.rs  ui.rs  video_dimensions.rs
frontend/render/: Cargo.toml  mod.rs
frontend/render/src/: composite.rs  lib.rs
frontend_libs/bpaf_toml_config/: Cargo.toml
frontend_libs/bpaf_toml_config/src/: coreconfig.rs  lib.rs
frontend_libs/pixels_scale_renderer/: Cargo.toml
frontend_libs/pixels_scale_renderer/src/: lib.rs
frontend_libs/render/: Cargo.toml
frontend_libs/render/src/: color.rs  composite.rs  composite_new.rs  consts.rs  draw.rs  draw_legacy.rs  lib.rs  resize.rs
frontends/martypc_eframe/: Cargo.toml  Trunk.toml  index.html  rust-toolchain
frontends/martypc_eframe/src/: app.rs  counter.rs  input.rs  lib.rs  main.rs  timestep_update.rs
frontends/martypc_pixels_desktop/: Cargo.toml  main.rs  main_fuzzer.rs
frontends/martypc_pixels_desktop/egui/: about.rs  color_swatch.rs  composite_adjust.rs  constants.rs  cpu_control.rs  cpu_state_viewer.rs  delay_adjust.rs  disassembly_viewer.rs  dma_viewer.rs  image.rs  ivr_viewer.rs  menu.rs  mod.rs  pic_viewer.rs  theme.rs  token_listview.rs  videocard_viewer.rs
frontends/martypc_pixels_desktop/src/: input.rs  lib.rs  main.rs  main_fuzzer.rs  run_fuzzer.rs  run_gentests.rs  run_headless.rs  run_processtests.rs  run_runtests.rs  window_manager.rs
frontends/martypc_pixels_wasm32/: Cargo.toml
frontends/martypc_pixels_wasm32/src/: lib.rs
frontends/martypc_pixels_wasm32/web/: .gitignore  freedos.json  player.css  player.html  player.js  ptomb.json
frontends/martypc_web_player_wgpu/: Cargo.toml
frontends/martypc_web_player_wgpu/src/: input.rs
lib/backend/display_backend_eframe/: Cargo.toml
lib/backend/display_backend_pixels/: Cargo.toml
lib/backend/display_backend_wgpu/: Cargo.toml
lib/backend/wgpu_wrapper/: Cargo.toml
lib/common/: Cargo.toml
lib/common/src/: lib.rs  util.rs
lib/frontend/common/: Cargo.toml
lib/frontend/config_toml_bpaf/: Cargo.toml
lib/frontend/display_manager_eframe/: Cargo.toml
lib/frontend/display_manager_trait/: Cargo.toml
lib/frontend/display_manager_wgpu/: Cargo.toml
lib/frontend/display_scaler_trait/: Cargo.toml
lib/frontend/frontend_common/: Cargo.toml
lib/frontend/marty_egui/: Cargo.toml
lib/frontend/marty_egui_eframe/: Cargo.toml
lib/frontend/marty_egui_wgpu/: Cargo.toml
lib/frontend/marty_render/: Cargo.toml
(+1126 files in other folders)
