[workspace]
members = [
    "crates/marty_core",
    "crates/marty_common",
    "crates/lib/frontend/marty_frontend_common",
    "crates/lib/frontend/marty_display_common",
    "crates/lib/frontend/marty_videocard_renderer",
    "crates/lib/frontend/marty_scaler_wgpu",
    "crates/lib/frontend/marty_scaler_glow",
    "crates/lib/frontend/display_manager_wgpu",
    "crates/lib/frontend/marty_egui",
    "crates/lib/frontend/marty_egui_common",
    "crates/lib/frontend/marty_egui_wgpu",
    "crates/lib/frontend/marty_config",
    "crates/lib/frontend/marty_web_helpers",
    "crates/binaries/martypc_headless",
    "crates/binaries/martypc_eframe",
    "crates/binaries/martypc_launcher",
    "crates/binaries/martypc_web_player_wgpu",
    "crates/binaries/martypc_desktop_wgpu"
]
resolver = "2"
default-members = ["crates/binaries/martypc_eframe"]

[workspace.package]
version = "0.4.1"
edition = "2021"
rust-version = "1.76"
license = "MIT"
authors = ["Daniel Balsom"]

[workspace.dependencies]
winit = "0.30"
wgpu = "23.0"
glow = "0.16"
bytemuck = "1.14"
raw-window-handle = "0.5.0"
thiserror = "2.0"
anyhow = "1.0"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serialport = { git = "https://github.com/dbalsom/serialport-rs", branch = "arduino-fix" }
web-time = "1.1.0"
toml = "0.8"
fxhash = "0.2.1"
enum_dispatch = "0.3.13"
indexmap = "2.2.6"
crossbeam-channel = "0.5.15"
zip = { version = "2.3", default-features = false }
strum = {  version = "0.27", features = ["derive"] }
strum_macros = "0.27"
url = "2.5"
egui_commonmark = { version = "0.19" }
rand = "0.9"
getrandom = "0.3"
regex = "1.5"
cfg-if = "1.0"
binrw = "0.14"
rfd = "0.15"
gilrs = "0.11"

# wasm workspace dependencies
# ---------------------------------------------------------------------------------------------------------------------

# Match the exact version of wasm-bindgen bundled with Trunk. This changes from time to time
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4"
wasm-bindgen-rayon = "1.3"
[workspace.dependencies.web-sys]
version = "=0.3.72"
features = [
    "DedicatedWorkerGlobalScope",
    "WorkerOptions",
    "WorkerType",
    "Url",
    "Blob",
    "BlobPropertyBag",
    "Window",
    "Document",
    "HtmlAnchorElement",
    "Event",
    "FileReader",
    "HtmlInputElement"
]

[workspace.dependencies.fluxfox]
git = "https://github.com/dbalsom/fluxfox.git"
branch = "martypc_consumer"
default-features = false

[workspace.dependencies.fluxfox_egui]
git = "https://github.com/dbalsom/fluxfox.git"
branch = "martypc_consumer"

[workspace.dependencies.egui]
#git = "https://github.com/dbalsom/egui_martypc.git"
#branch = "0.30.0_raw_winit_hook"
version = "0.30.0"
default-features = false

[workspace.dependencies.eframe]
git = "https://github.com/dbalsom/egui_martypc.git"
branch = "0.30.0_raw_winit_hook"
#version = "0.30.0"
default-features = false

[workspace.dependencies.egui-winit]
git = "https://github.com/dbalsom/egui_martypc.git"
branch = "0.30.0_raw_winit_hook"
default-features = false
#version = "0.30.0"
#branch = "0_24_2_winit_0_29_15"
#features = ["clipboard", "wayland", "x11"]

[workspace.dependencies.egui-wgpu]
#git = "https://github.com/dbalsom/egui_martypc.git"
#branch = "0.30.0_raw_winit_hook"
version = "0.30.0"

[workspace.dependencies.egui_glow]
version = "0.30.0"

[workspace.dependencies.egui_extras]
git = "https://github.com/dbalsom/egui_martypc.git"
branch = "0.30.0_raw_winit_hook"
default-features = false
#branch = "0_24_2_winit_0_29_15"
features = ["image"]

[workspace.dependencies.egui_plot]
version = "0.30.0"
#default-features = false

[workspace.dependencies.egui-notify]
version = "0.18"

[workspace.dependencies.image]
version = "0.25"
default-features = false
features = ["png"]

#[workspace.dependencies.pixels]
#git = "https://github.com/mattjuk/pixels.git"
#branch = "update-wgpu-22-winit-0.30"
#git = "https://github.com/dbalsom/pixels_martypc.git"
#branch = "marty_update_deps4"

[workspace.dependencies.rodio]
git = "https://github.com/dbalsom/rodio_martypc.git"
branch = "buffer_size"

#[workspace.dependencies.egui]
#git = "https://github.com/dbalsom/egui_martypc.git"
#branch = "0_24_2_winit_0_29_15"
#
#[workspace.dependencies.egui-wgpu]
#git = "https://github.com/dbalsom/egui_martypc.git"
#branch = "0_24_2_winit_0_29_15"
#
#[workspace.dependencies.egui-winit]
#git = "https://github.com/dbalsom/egui_martypc.git"
#branch = "0_24_2_winit_0_29_15"
#default-features = false
#features = ["clipboard", "wayland", "x11"]
#
#[workspace.dependencies.egui_extras]
#git = "https://github.com/dbalsom/egui_martypc.git"
#branch = "0_24_2_winit_0_29_15"
#features = ["image"]
#
#[workspace.dependencies.egui_plot]
#git = "https://github.com/dbalsom/egui_martypc.git"
#branch = "0_24_2_winit_0_29_15"

[profile.release]
opt-level = 3

[profile.release-lto]
inherits = "release"
lto = true
strip = true
opt-level = 3

[profile.dev.package."*"]
opt-level = 3





