[package]
name = "marty_common"
description = "Common types and code shared between MartyPC's core and frontend crates."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "marty_common"
path = "src/lib.rs"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash.workspace = true
serde.workspace = true
web-time.workspace = true
