[package]
name = "marty_render"
version = "0.1.2"
edition = "2018"

[lib]
name = "marty_render"
path = "src/lib.rs"

[dependencies]
marty_core = { path = "../../core" }

bytemuck = "1.13.1"
cgmath = "0.18.0"
fast_image_resize = "2.7.3"
image = { version = "0.24.2", default-features = false, features = ["png"] }
rand = "0.8.5"

