[package]
name = "marty_render"
version = "0.1.3"
edition = "2021"
license = "MIT"

[lib]
name = "marty_render"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
marty_core = { path = "../../core" }

bytemuck = "1.13.1"
cgmath = "0.18.0"
glam = "0.24.0"
fast_image_resize = "2.7.3"
image = { version = "0.24.2", default-features = false, features = ["png"] }
rand = "0.8.5"

log = "0.4"