[package]
name = "marty_render"
version = "0.2.0"
edition = "2021"
license = "MIT"

[lib]
name = "marty_render"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
marty_core = { path = "../../core" }
display_scaler = { path = "../../frontend_libs/display_scaler" }
marty_pixels_scaler = { path = "../../frontend_libs/marty_pixels_scaler" }
bytemuck = { version = "1.13.1", features = ["derive"] }
cgmath = "0.18.0"
glam = "0.24"
fast_image_resize = "2.7.3"
image = { version = "0.24.2", default-features = false, features = ["png"] }
rand = "0.8.5"
log = "0.4"

[dev-dependencies]
criterion = "0.5"
bytemuck = { version = "1.13.1", features = ["derive"] }

[[bench]]
name = "render_bench"
harness = false