[package]
name = "martypc_pixels_desktop"
version = "0.2.0"
edition = "2021"
license = "MIT"

[lib]
name = "martypc_pixels_desktop"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
marty_core = { path = "../../core"}
marty_render = { path = "../../frontend_libs/render"}
bpaf_toml_config = { path = "../../frontend_libs/bpaf_toml_config"}
display_scaler = { path = "../../frontend_libs/display_scaler" }
marty_pixels_scaler = { path = "../../frontend_libs/marty_pixels_scaler" }
bytemuck = "1.13.1"
colored = "2.0.4"
cpal = "0.13.5"
#egui = "0.22"
emath = "0.20"
#egui-wgpu = "0.22"
#egui-winit = { version = "0.22", default-features = false, features = ["links"] }
env_logger = "0.9"
flate2 = "1.0.27"
image = { version = "0.24.2", default-features = false, features = ["png"] }
log = "0.4"
pixels = "0.13"
rand = "0.8.5"
getrandom = "0.2.6"
regex = "1.5.5"
resize = "0.7.4"
rgb = "0.8.33"
serde = { version = "1.0.107", features = ["derive"] }
serde_derive = "1.0.107"
serde_json = "1.0.105"
serialport = "4.2.0"
winit = { version = "=0.29.0-beta.0" }
#winit_input_helper = "0.14"

[dependencies.egui]
git = "https://github.com/dbalsom/egui_martypc.git"
branch = "winit_0_29"

[dependencies.egui-wgpu]
git = "https://github.com/dbalsom/egui_martypc.git"
branch = "winit_0_29"

[dependencies.egui-winit]
git = "https://github.com/dbalsom/egui_martypc.git"
branch = "winit_0_29"

# Conditional dependencies for wasm32 target. 
[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.13.5", features = ["wasm-bindgen"]}
console_error_panic_hook = "0.1"
console_log = "0.2"
error-iter = "0.4"
getrandom = { version = "0.2.6", features = ["js"] }
instant = "0.1.12"
#futures = "0.3.28"
js-sys = "0.3.63"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["GpuTextureFormat", "Request", "RequestInit", "Response", "Headers", "Blob", "FileReader", "ProgressEvent"] }
wgpu = { version = "0.16", features = ["webgl"] }

[dev-dependencies]
criterion = "0.5.1"

[profile.dev.package."*"]
opt-level = 3

[features]
devtools = []
cpu_validator = []
arduino_validator = []