[package]
name = "martypc_pixels_desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "martypc_pixels_desktop"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
display_backend_pixels = { path = "../../lib/backend/display_backend_pixels" }
marty_core = { path = "../../core"}
marty_common = { path = "../../lib/frontend/common" }
videocard_renderer = { path = "../../lib/frontend/videocard_renderer" }
display_manager_wgpu = { path = "../../lib/frontend/display_manager_wgpu" }

marty_egui = { path = "../../lib/frontend/marty_egui" }
config_toml_bpaf = { path = "../../lib/frontend/config_toml_bpaf" }
#display_scaler = { path = "../../lib/frontend/display_scaler_trait" }
marty_pixels_scaler = { path = "../../lib/frontend/marty_scaler_wgpu" }

bytemuck.workspace = true
colored = "2.0.4"
cpal = "0.13.5"
#egui = "0.22"

env_logger = "0.9"
flate2 = "1.0.27"
image = { version = "0.24.2", default-features = false, features = ["png"] }
log = "0.4"
#pixels = "0.13"
rand = "0.8.5"
getrandom = "0.2.6"
regex = "1.10"
resize = "0.7.4"
rgb = "0.8.33"
serde = { version = "1.0.107", features = ["derive"] }
serde_derive = "1.0.107"
serde_json = "1.0.105"
serialport = "4.2"
#winit = { version = "=0.29.0-beta.0" }
winit = "0.29.4"
#winit_input_helper = "0.14"

#emath = "0.24.0"
#egui = "0.24.0"
#egui-wgpu = "0.24.0"
#egui-winit = { version = "0.24", default-features = false, features = ["links"] }

pixels.workspace = true

[dependencies.egui]
git = "https://github.com/dbalsom/egui_martypc.git"
branch = "0_24_winit_0_29"

[dependencies.egui-wgpu]
git = "https://github.com/dbalsom/egui_martypc.git"
branch = "0_24_winit_0_29"

[dependencies.egui-winit]
git = "https://github.com/dbalsom/egui_martypc.git"
branch = "0_24_winit_0_29"

# Conditional dependencies for wasm32 target. 
[target.'cfg(target_arch = "wasm32")'.dependencies]
cpal = { version = "0.13.5", features = ["wasm-bindgen"]}
console_error_panic_hook = "0.1"
console_log = "0.2"
error-iter = "0.4"
getrandom = { version = "0.2.6", features = ["js"] }
instant = "0.1.12"
#futures = "0.3.28"
js-sys = "0.3.63"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["GpuTextureFormat", "Request", "RequestInit", "Response", "Headers", "Blob", "FileReader", "ProgressEvent"] }
wgpu = { version = "0.16", features = ["webgl"] }

[dev-dependencies]
criterion = "0.5.1"

[features]
devtools = []
cpu_validator = []
arduino_validator = []